FEAT: Improved UI and popup messages.

--- a/src/constants.css
+++ b/src/constants.css
@@ -1,4 +1,7 @@
 :root {
   --color-primary-violet: #9b91f2;
+  --color-primary-violet-2: #9b91f2cc;
   --color-primary-blue: #102aad;
+  --color-primary-yellow: #fff95b;
+  --color-primary-yellow-dark: #ff930f;
 }
