--- a/src/constants.css
+++ b/src/constants.css
@@ -1,6 +1,8 @@
 :root {
+  --color-primary-white: #ffffff;
   --color-primary-violet: #9b91f2;
   --color-primary-violet-2: #9b91f2cc;
+  --color-primary-violet-3: #9b91f268;
   --color-primary-blue: #102aad;
   --color-primary-yellow: #fff95b;
   --color-primary-yellow-dark: #ff930f;
