--- a/src/pages/dashboard/Home/DashboardHome.module.css
+++ b/src/pages/dashboard/Home/DashboardHome.module.css
@@ -1,6 +1,7 @@
 .container {
   display: flex;
   flex-direction: column;
+  position: relative;
   .products {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
