--- a/src/constants.css
+++ b/src/constants.css
@@ -3,7 +3,9 @@
   --color-primary-violet: #9b91f2;
   --color-primary-violet-2: #9b91f2cc;
   --color-primary-violet-3: #9b91f268;
-  --color-primary-blue: #102aad;
+  --color-primary-blue: #3c97ff;
+  --color-primary-blue-2: #3c97ff9f;
+  --color-primary-blue-3: #3c97ff50;
   --color-primary-yellow: #fff95b;
   --color-primary-yellow-dark: #ff930f;
 }
